[INVESTIGATE] Cache service (why JCache stats doesn't restart correctly after reseting ?)